# classification

./: CMakeLists.txt
include/: classification.hpp
proto/: solver.prototxt  train_val.prototxt
src/: CMakeLists.txt  classification.cpp  main.cpp
